--- a/src/vue-cli3/package.json
+++ b/src/vue-cli3/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "reset-css": "^4.0.1",
+    "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
+    "vue": "^2.5.17",
+    "vue-analytics": "^5.16.0",
+    "vue-moment": "^4.0.0",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
