リダイレクトの設定をした

--- a/cloudformation/s3.yml
+++ b/cloudformation/s3.yml
@@ -11,6 +11,12 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: error.html
+        RoutingRules:
+          - RoutingRuleCondition:
+              HttpErrorCodeReturnedEquals: '404'
+            RedirectRule:
+              HostName: 1day-release.com
+              ReplaceKeyPrefixWith: '#!/'
 
   WebsitebucketPolicy:
     Type: 'AWS::S3::BucketPolicy'
