--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,30 @@
-jobs:
-  - language: node_js
-    node_js:
-      - '10'
-    install:
-      - cd src
-      - npm install
-    script:
-      - npm run build
+language: node_js
+node_js:
+  - '10'
 dist: trusty
 sudo: false
 cache: npm
 branches:
   only:
     - develop
+    - master
 install:
-  - cd src
+  - cd src/vue-cli3
   - npm install
 script:
   - npm build
 
 deploy:
-  provider: s3
-  access_key_id: '$AWS_ACCESS_KEY_ID'
-  secret_access_key: '$AWS_SECRET_ACCESS_KEY'
-  bucket: 1day-release.com
-  region: ap-northeast-1
-  local_dir: dist
-  endpoint: 1day-release.com.s3-website-ap-northeast-1.amazonaws.com
-  skip_cleanup: true
-  on:
-    branch: deploy
+  - provider: s3
+    access_key_id: '$AWS_ACCESS_KEY_ID'
+    secret_access_key: '$AWS_SECRET_ACCESS_KEY'
+    bucket: 1day-release.com
+    region: ap-northeast-1
+    local_dir: dist
+    endpoint: 1day-release.com.s3-website-ap-northeast-1.amazonaws.com
+    skip_cleanup: true
+    on:
+      branch: develop
 
 after_deploy:
   - aws s3 sync dist/. s3://1day-release.com
