--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,7 @@ deploy:
     bucket: 1day-release.com
     region: ap-northeast-1
     local_dir: dist
-    endpoint: 1day-release.com.s3-website-ap-northeast-1.amazonaws.com
+    endpoint: s3-ap-northeast-1.amazonaws.com
     skip_cleanup: true
     on:
       branch: develop
-
-after_deploy:
-  - aws s3 sync dist/. http://1day-release.com.s3-website-ap-northeast-1.amazonaws.com
