--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,6 @@ deploy:
     skip_cleanup: true
     on:
       branch: develop
+
+notifications:
+  slack: myms-kitchen:TENRqMj3DwUV9waYkA5cTLnT#booster-deploy
