--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ deploy:
   - provider: s3
     access_key_id: '$AWS_ACCESS_KEY_ID'
     secret_access_key: '$AWS_SECRET_ACCESS_KEY'
-    bucket: 1day-release.com
+    bucket: dev.1day-release.com
     region: ap-northeast-1
     local_dir: dist
     endpoint: s3-ap-northeast-1.amazonaws.com
