--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,18 @@ deploy:
     skip_cleanup: true
     on:
       branch: develop
+
+  - provider: s3
+    access_key_id: '$AWS_ACCESS_KEY_ID'
+    secret_access_key: '$AWS_SECRET_ACCESS_KEY'
+    bucket: stg.1day-release.com
+    region: ap-northeast-1
+    local_dir: dist
+    endpoint: s3-ap-northeast-1.amazonaws.com
+    skip_cleanup: true
+    on:
+      branch: staging
+
   - provider: s3
     access_key_id: '$AWS_ACCESS_KEY_ID'
     secret_access_key: '$AWS_SECRET_ACCESS_KEY'
