--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ install:
 script:
   - npm run build
 after_script:
-  - cd ../../
-  - 'if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "develop" ] && [ "$TRAVIS_TAG" == "" ]; then node ./travis/dev.js; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "develop" ] && [ "$TRAVIS_TAG" == "" ]; then node ../../travis/dev.js; fi'
 
 notifications:
   slack:
