--- a/src/vue-cli3/package.json
+++ b/src/vue-cli3/package.json
@@ -36,6 +36,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "mime-type": "^3.0.7",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
