--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
   - npm run build
 after_script:
   - 'if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "develop" ] && [ "$TRAVIS_TAG" == "" ]; then node ../../travis/dev.js; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "staging" ] && [ "$TRAVIS_TAG" == "" ]; then node ../../travis/stg.js; fi'
 
 notifications:
   slack:
