--- a/src/vue-cli3/package.json
+++ b/src/vue-cli3/package.json
@@ -19,6 +19,8 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-scrollama": "^1.1.0",
+    "vue-smooth-scroll": "^1.0.13",
+    "vue-smoothscroll": "^0.2.0",
     "vue-typer": "^1.2.0",
     "vuex": "^3.0.1"
   },
