--- a/src/vue-cli3/package.json
+++ b/src/vue-cli3/package.json
@@ -15,6 +15,7 @@
     "source-code-pro": "git://github.com/adobe-fonts/source-code-pro.git#release",
     "vue": "^2.5.17",
     "vue-analytics": "^5.16.0",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-moment": "^4.0.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
